<resources>
    <string name="app_name">Concert.IO</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="cancel">Cancel</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="review_location_placeholder">Review Location</string>
    <string name="review_artist_placeholder">Review Artist</string>
    <string name="review_text_placeholder">Review Text</string>
    <string name="upload_review">Upload Review</string>
    <string name="choose_media">Choose Media</string>
    <string name="artist_name_hint">Artist Name</string>
    <string name="review_location_hint">Location</string>
    <string name="reviewer_name_placeholder">Reviewer Name</string>
    <string name="full_name_hint">Full Name</string>
    <string name="change_sensitive_fields">Change Sensitive Fields</string>
    <string name="password_hint">Password</string>
    <string name="save_changes">Save Changes</string>
    <string name="sign_in_with_email">Sign In With Email</string>
    <string name="continue_action">Continue</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="location">Location</string>
    <string name="search_by_artist_or_location">Search by artist or location</string>
</resources>