<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_review_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/review_location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginVertical="16dp"
        android:src="@drawable/baseline_edit_location_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?attr/colorPrimaryVariant" />

    <TextView
        android:id="@+id/review_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_location_placeholder"
        android:textColor="?attr/colorPrimaryVariant"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/review_location_icon"
        app:layout_constraintTop_toTopOf="@id/review_location_icon" />

    <ImageView
        android:id="@+id/review_artist_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:src="@drawable/baseline_artist_24"
        app:layout_constraintTop_toBottomOf="@id/review_location_icon"
        app:layout_constraintStart_toStartOf="@id/review_location_icon"
        app:tint="?attr/colorPrimaryVariant" />

    <TextView
        android:id="@+id/review_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_artist_placeholder"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/review_artist_icon"
        app:layout_constraintTop_toTopOf="@id/review_artist_icon"
        app:layout_constraintBottom_toBottomOf="@id/review_artist_icon"/>

    <RatingBar
        android:id="@+id/review_stars"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:isIndicator="true"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:transformPivotX="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_artist" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/edit_review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/edit"
        android:textColor="?attr/colorPrimaryVariant"
        app:icon="@drawable/baseline_edit_24"
        app:iconTint="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/review_stars"
        app:layout_constraintTop_toTopOf="@id/review_stars" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_review_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:text="@string/delete"
        android:textColor="?attr/colorPrimaryVariant"
        app:icon="@drawable/baseline_delete_24"
        app:iconTint="?attr/colorPrimaryVariant"
        app:layout_constraintEnd_toStartOf="@id/edit_review_button"
        app:layout_constraintTop_toTopOf="@id/review_stars" />

    <include
        android:id="@+id/review_media"
        layout="@layout/review_media_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_stars" />

    <TextView
        android:id="@+id/review_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="32dp"
        android:text="@string/review_text_placeholder"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/review_media"
        app:layout_constraintTop_toBottomOf="@id/review_media" />

</androidx.constraintlayout.widget.ConstraintLayout>