<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/student_list_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/reviewer_image"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/empty_profile_picture"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reviewer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/reviewer_name_placeholder"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@id/reviewer_image"
        app:layout_constraintTop_toTopOf="parent" />

    <RatingBar
        android:id="@+id/review_stars"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:isIndicator="true"
        android:scaleX="0.5"
        android:scaleY="0.5"
        android:transformPivotX="0dp"
        android:layout_marginTop="4dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@id/reviewer"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/review_location_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/baseline_edit_location_24"
        app:layout_constraintStart_toEndOf="@id/reviewer_image"
        app:layout_constraintTop_toBottomOf="@id/reviewer" />

    <TextView
        android:id="@+id/review_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_location_placeholder"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/review_location_icon"
        app:layout_constraintStart_toEndOf="@id/review_location_icon"
        app:layout_constraintTop_toBottomOf="@id/reviewer" />

    <ImageView
        android:id="@+id/review_artist_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/baseline_artist_24"
        app:layout_constraintBottom_toBottomOf="@id/review_artist"
        app:layout_constraintEnd_toStartOf="@id/review_artist" />

    <TextView
        android:id="@+id/review_artist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/review_artist_placeholder"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/review_location"
        app:layout_constraintTop_toTopOf="@id/review_location" />

    <include
        android:id="@+id/review_media"
        layout="@layout/review_media_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/reviewer_image" />

    <TextView
        android:id="@+id/review_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Review Text"
        android:textSize="36sp"
        android:paddingHorizontal="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/review_media" />
</androidx.constraintlayout.widget.ConstraintLayout>